# CEIA-NLP

./: README.md  pyproject.toml
notebooks/01 - vectorizacion de texto y clasificacion Naive Bayes/: 01 - Resolucion.ipynb
notebooks/02 - Custom embeddings con Gensim/: 02 - Enunciado.ipynb  los_miserables.txt
notebooks/03 - Modelo de lenguaje con tokenizacion/: 03 - Enunciado_char.ipynb  03 - Enunciado_word.ipynb  03 - Resolucion_char.ipynb  03 - Resolucion_word.ipynb  libro_utilizado.txt  model_GRU.keras  model_LSTM.keras  model_RNN.keras
notebooks/04 - LSTM Bot QA/: 04 - Resolucion.ipynb
notebooks/05 - Bert Sentiment Analysis/: 05 - Resolucion.ipynb
