[tool.poetry]
name = "ceia-nlp"
version = "0.1.0"
description = "Entorno para los desafios de la materia NLP"
authors = ["Isidro Marco Joel <marcojoelisidro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
