[tool.poetry]
name = "ceia-nlp"
version = "0.1.0"
description = "Entorno para los desafios de la materia NLP"
authors = ["Isidro Marco Joel <marcojoelisidro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
gensim = "^4.3.3"
keras = "^3.5.0"
nltk = "^3.9.1"
tensorflow = "^2.17.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.2.9"	


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
