[tool.poetry]
name = "ceia-nlp"
version = "0.1.0"
description = "Entorno para los desafios de la materia NLP"
authors = ["Isidro Marco Joel <marcojoelisidro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
gensim = "^4.3.3"
keras = "3.4.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.2.9"	
tensorflow = "2.17.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
gradio = "^4.44.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
